[metadata]
name = hyver
summary = hyver - Manage xhyve instances.
description-file = README.rst
author = John Dewey
author-email = john@dewey.ws
home-page = https://github.com/retr0h/hyver
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: System :: Systems Administration
    Topic :: Utilities

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    hyver = hyver.shell:main

[files]
packages =
    hyver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
